--- a/src/main/resources/fxml/SequenceGameView.fxml
+++ b/src/main/resources/fxml/SequenceGameView.fxml
@@ -10,6 +10,6 @@
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="edu.neumont.csc150.view.SequenceGameView"
             prefHeight="400.0" prefWidth="600.0"
-            stylesheets="SequenceGameView.css">
+            stylesheets="../css/SequenceGameView.css">
 
 </BorderPane>
